# pubify-pubs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: deploy-docs.yml
docs/: api.md  architecture.md  development.md  index.md  pinning.md  pubify-data-split-plan.md  sync.md  testing.md  versions.md
scripts/: release.py  release_support.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/architecture/: index.html
site/development/: index.html
site/pinning/: index.html
site/pubify-data-split-plan/: index.html
site/search/: search_index.json
site/sync/: index.html
site/testing/: index.html
site/versions/: index.html
src/pubify_pubs/: __init__.py  cli.py  config.py  data.py  decorators.py  discovery.py  export.py  helpers.py  latex_bootstrap.py  mirror.py  pinning.py  runtime.py  shell_incremental.py  stats.py  stubs.py  tables.py  texlog.py  versioning.py
src/pubify_pubs/assets/: __init__.py
src/pubify_pubs/assets/init/: AGENTS.example.md  AGENTS.md  __init__.py  figures.py  main.tex
src/pubify_pubs/commands/: __init__.py  common.py  core.py  pinning.py  registry.py  sync.py  versions.py
tests/: conftest.py  test_cli.py  test_cli_core.py  test_cli_pinning.py  test_cli_sync.py  test_cli_versions.py  test_export.py  test_release.py  test_stats.py  test_tables.py
